Mobile menu adress bar jump: won't fix.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -89,9 +89,8 @@ figure {
   .site-header {
     @extend .pos-f-t;
     bottom: 0;
-    overflow: scroll;
+    overflow-y: scroll;
     margin-bottom: 0;
-    padding-bottom: 100px;
   }
   .site-name-wrapper {
     .icons {
